Modify debug config to include output of unit tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,10 @@
                     "test",
                     "--no-run",
                     "--bin=todocommander",
-                    "--package=todocommander"
+                    "--package=todocommander",
+                    "--",
+                    "--nocapture",
+
                 ],
                 "filter": {
                     "name": "todocommander",
