--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Ariel Viera <ariel.viera@gmail.com>"]
 edition = "2018"
 description = "Command line utility to manipulate todo.txt files"
 license = "MIT"
-repository = "https://github.com/avierax/tc"
-homepage = "https://github.com/avierax/tc"
+repository = "https://github.com/avierax/todocommander"
+homepage = "https://github.com/avierax/todocommander"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
