--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "todocommander"
+name = "tcd"
 version = "0.2.1"
 authors = ["Ariel Viera <ariel.viera@gmail.com>"]
 edition = "2018"
-description = "Command line utility to manipulate todo.txt files"
+description = "TodoCommanDer. Console and command and line utility to manipulate todo.txt files"
 license = "MIT"
 repository = "https://github.com/avierax/todocommander"
 homepage = "https://github.com/avierax/todocommander"
